/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.service.accelerator.proto;

import "acceleration-common.proto";
import "job.proto";
import "dataset.proto";


option java_package = "com.dremio.service.accelerator.proto";
option optimize_for = SPEED;

option java_outer_classname = "AccelerationDacProtobuf";

// defines messages that represent a user intent

message LayoutDescriptor {
  // layout details
  required LayoutDetailsDescriptor details = 1;
  // unique layout id
  optional LayoutId id = 2;
  // name
  optional string name = 3;
}

message LayoutDetailsDescriptor {
  // partition fields
  repeated LayoutFieldDescriptor partitionField = 1;
  // order sensitive list of sort fields
  repeated LayoutFieldDescriptor sortField = 2;
  // dimension fields
  repeated LayoutDimensionFieldDescriptor dimensionField = 3;
  // measure fields
  repeated LayoutMeasureFieldDescriptor measureField = 4;
  // display fields
  repeated LayoutFieldDescriptor displayField = 5;
  // distribution fields
  repeated LayoutFieldDescriptor distributionField = 6;
  // distribution strategy for partitions
  optional PartitionDistributionStrategy partitionDistributionStrategy = 7 [default = CONSOLIDATED];
}

message LayoutFieldDescriptor {
  // field name
  required string name = 1;
}

message LayoutMeasureFieldDescriptor {
  // field name
  required string name = 1;

  repeated MeasureType measure_type = 2;
}

message LayoutDimensionFieldDescriptor {
  // field name
  required string name = 1;
  // granularity
  optional DimensionGranularity granularity = 2 [default = DATE];
}

